fix: change registrar